# infosec-job-market-intel

./: .codecov.yml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/skills/llm-analyze-listings/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
job_market_intel/: __init__.py  auth.py  cli.py  dashboard.py  dashboard_launcher.py  dashboard_state.py  dedup.py  models.py  pattern_mining.py  pipeline.py  reclassify.py  reporting.py  scoring.py  seeds.py
job_market_intel/collectors/: __init__.py  greenhouse.py  jobspy.py  lever.py  usajobs.py
job_market_intel/extract/: __init__.py  cli_llm.py  llm.py  regex_rules.py  subagent_io.py
reports/: README.md  discovered-patterns-2026-05-25.md  report-2026-05-24.md  report-2026-05-25.md  snapshot-2026-05-24.csv  snapshot-2026-05-24.json  snapshot-2026-05-25.csv  snapshot-2026-05-25.json  trend.csv
tests/: test_dashboard_state.py  test_job_market_intel.py
